# psi-toolkit

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.txt  brutto.sh  check.sh  date_example.sh  kosz_vs_wozek.txt  old_rule_vs_new_rule.txt  process-file.py  psi-pipe  psi-pipe-or-server.sh  psi-server  puddle-unit-tests.py  puddle_example.sh  puddle_fail.sh  static.sh  valgrind.supp
cmake-modules/: FindGraphviz.cmake  FindJNIAlt.cmake  FindOpenFST.cmake
common/: CMakeLists.txt  aligning_writer_worker.cpp  aligning_writer_worker.hpp  annotation_item.cpp  annotation_item.hpp  annotation_item_manager.cpp  annotation_item_manager.hpp  annotator_factory.cpp  config.hpp.in  (+45 more)
tools/lemmatizers/lamerlemma/: CMakeLists.txt  Morfologik2Psi.pl  PoliMorf2Psi.pl  canonical_huffman.hpp  dictionary.cpp  dictionary.hpp  lamerlemma.cpp  lamerlemma.hpp  utility_functions.cpp  utility_functions.hpp
tools/lemmatizers/lamerlemma/data/: description.txt  detailed_description.txt
tools/lemmatizers/lamerlemma/data/m/help-base/: REQUIRES  WHAT  simple.out.txt
tools/lemmatizers/lamerlemma/data/m/help-lexeme/: REQUIRES  WHAT  lexeme.out.txt
tools/lemmatizers/lamerlemma/m/lamerlemma/: WHAT  kaszlalby.in.txt  kaszlalby.out.psi
tools/lemmatizers/lamerlemma/t/: lamerlemma_tests.cpp
tools/lexica/mapper/: CMakeLists.txt  mapper.cpp  mapper.hpp
tools/lexica/mapper/data/: configurations.xml  description.txt
tools/lexica/mapper/m/fake-tags-conversion/: REQUIRES  WHAT  fake-tags-conversion-lexicon.txt  simple.in.txt  simple.out.psi
tools/lexica/mapper/m/fake-translation/: WHAT  fake-translation-lexicon.txt  simple.out.txt
tools/normalizers/iayko/: CMakeLists.txt  iayko.cpp  iayko.hpp  openfst_plugin.cpp  openfst_plugin.hpp
tools/normalizers/iayko/data/: description.txt
tools/normalizers/iayko/data/m/help1/: DESCRIPTION  WHAT  simple.in.txt  simple.out.txt
tools/normalizers/iayko/data/m/help2/: DESCRIPTION  WHAT  simple.out.txt
tools/normalizers/iayko/data/m/help3/: DESCRIPTION  WHAT
tools/normalizers/iayko/data/m/help4/: DESCRIPTION  WHAT  simple.in.txt  simple.out.txt
tools/normalizers/iayko/data/m/help5/: DESCRIPTION  WHAT  sample.out.txt
tools/normalizers/iayko/data/m/help6/: DESCRIPTION  WHAT
tools/normalizers/iayko/data/m/help7/: DESCRIPTION  WHAT  sample.in.txt  sample.out.txt
tools/normalizers/iayko/data/pl/: aux.grm  aux.md  conditions.txt  rules.grm  rules.md  rules.txt
tools/normalizers/iayko/plugin/: CMakeLists.txt  fst_path_finder.cpp  openfst_adapter_impl.cpp  openfst_adapter_impl.hpp  openfst_adapter_interface.hpp
tools/normalizers/iayko/t/: CMakeLists.txt  iayko_tests.cpp
tools/normalizers/niema/: CMakeLists.txt  niema.cpp  niema.hpp
tools/normalizers/niema/data/: description.txt
tools/normalizers/niema/data/pl/: all.far  conditions.txt
tools/normalizers/niema/t/: CMakeLists.txt  niema_tests.cpp
tools/translators/bonsai/utils/binaries/: CMakeLists.txt  CompressedDAGBuilder.hpp  ExtractedRule.cpp  ExtractedRule.h  IncrementalFSA.cpp  IncrementalFSA.hpp  OutputFileStream.cpp  OutputFileStream.h  PhraseAlignment.cpp  PhraseAlignment.h  Register.cpp  Register.hpp  SafeGetline.h  ScoreFeature.cpp  ScoreFeature.h  SentenceAlignment.cpp  SentenceAlignmentWithSyntax.cpp  SentenceAlignmentWithSyntax.h  SyntaxTree.cpp  SyntaxTree.h  XmlTree.cpp  XmlTree.h  binfsa.cpp  cmd.c  cmd.h  consolidate-main.cpp  domain.cpp  domain.h  extract-rules-main.cpp  gzfilebuf.h  minfsa.cpp  score-main.cpp  score.h  symal.cpp  tables-core.cpp  testsv.cpp  txt2monotonic.cpp  txt2stringvector.cpp
tools/translators/transferer/: CMakeLists.txt  edge2zsyntree.cpp  edge2zsyntree.hpp  i2morpho.i  i2morpho.pl  i2morpho.tbl  i2morpho_de.i  i2morpho_de.tbl  i2morpho_es.i  i2morpho_es.tbl  i2morpho_ru.i  i2morpho_ru.tbl  lex.trlex.lpp  numconversion.cpp  numconversion.hpp  test_results_recorder.cpp  test_results_recorder.hpp  transferer.cpp  transferer.hpp  transferer_runner.cpp  transferer_runner.hpp  trparser.y  trules.cpp  trules.hpp  trunner.cpp  tscript_factory.hpp  tscript_from_file.cpp  tscript_from_file.hpp  tscript_visitor.hpp
tools/translators/transferer/data/: description.txt  plen.mti  ples.mti
tools/translators/transferer/data/m/help-aa/: DESCRIPTION  WHAT
tools/translators/transferer/data/m/help-bb/: DESCRIPTION  WHAT  simple.in.txt  simple.out.txt
tools/translators/transferer/data/m/help-ss/: DESCRIPTION  WHAT  simple.in.txt  simple.out.txt
tools/translators/transferer/data/m/help-tt/: DESCRIPTION  WHAT
tools/translators/transferer/m/plen/: WHAT  simple.in.txt  simple.out.txt
tools/translators/transferer/m/ples/: WHAT  simple.in.txt  simple.out.txt
tools/translators/transferer/t/: CMakeLists.txt  transferer_tests.cpp
tools/translators/transferer/t/engine_tests/: and.t  atoi.t  cat.t  change_category.t  change_label.t  cut_suffix.t  default.t  delete.t  do_surface.t  eqv.t  first.t  first_subtree.t  get.t  get_option.t  insert_after.t  insert_before.t  insert_find.t  is_upper.t  label.t  lc.t  not.t  nounderscores.t  null.t  operator_dodawania.t  operator_dopasowania.t  operator_kropka.t  operator_listy.t  operator_negacji.t  operator_nierownosci.t  operator_podzbioru.t  operator_porownania.t  operator_przekroj.t  operator_przypisania.t  operator_strzalka.t  or.t  ordnum2pltext.t  pair.t  parent.t  precedes.t  replace_with.t  (+13 more)
uchardet/src/: CMakeLists.txt  CharDistribution.cpp  CharDistribution.h  JpCntx.cpp  JpCntx.h  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  nsBig5Prober.cpp  nsBig5Prober.h  nsCodingStateMachine.h  nsEUCJPProber.cpp  nsEUCJPProber.h  nsEUCKRProber.cpp  nsEUCKRProber.h  nsEUCTWProber.cpp  nsEUCTWProber.h  nsEscCharsetProber.cpp  nsEscCharsetProber.h  nsEscSM.cpp  nsGB2312Prober.cpp  nsGB2312Prober.h  nsLatin1Prober.cpp  nsLatin1Prober.h  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  nsMBCSSM.cpp  nsPkgInt.h  nsSBCSGroupProber.cpp  nsSBCharSetProber.h  nsSJISProber.cpp  nsSJISProber.h  nsUTF8Prober.cpp  nsUTF8Prober.h  nsUniversalDetector.cpp  uchardet.cpp
(+602 files in other folders)
